[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "centechutilities"
version = "0.1.0"
description = "Outils EDA pédagogiques pour la Data Science (CenTechUtilities)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "DutyRisto" }
]
keywords = ["eda", "datascience", "education", "visualization", "utilities"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: MIT License",
  "Intended Audience :: Education"
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.23",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scipy>=1.10",
  "openpyxl>=3.1"  # pour lire XLSX
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "build>=1.0", "twine>=4.0"]
profile = ["ydata-profiling>=4.6"]  # optionnel



[project.scripts]
# Commande CLI installée par pip:
centechutilities = "centechutilities.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
centechutilities = ["datasets/*"]